--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -239,7 +239,8 @@ include::{generated}/cards-get-byexpirationdate/response.asciidoc[]
 
 ==== Получение списка всех карт клиента с последней операцией 31 января 2015 года
 ....
-Клиент получает список всех своих карт с последней операцией 31 января 2015 года (lastTransaction =  2015-01-31)
+Клиент получает список всех своих карт с последней операцией 31 января 2015 года 
+(lastTransaction =  2015-01-31)
 ....
 ===== Example request
 
