--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -200,7 +200,7 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
 | 9
@@ -228,7 +228,7 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | verificationMethod
 | 10
@@ -262,7 +262,7 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Pagination
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | page
 | 2
@@ -387,7 +387,7 @@ include::{generated}/cards-get-recipientcards/response.asciidoc[]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
 | 9
@@ -408,7 +408,7 @@ include::{generated}/cards-get-recipientcards/response.asciidoc[]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | cardId
 | 16
@@ -438,7 +438,7 @@ include::{generated}/cards-get-byid/response.asciidoc[]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
 | 9
@@ -459,7 +459,7 @@ include::{generated}/cards-get-byid/response.asciidoc[]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | Обязательность | Описание | Тип
+| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
 
 | cardId
 | 16
