--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -422,7 +422,7 @@ include::{generated}/cards-get-recipientcards/response.asciidoc[]
 
 ==== Получение параметров заданной карты 
 ....
-Клиент получает все данные по своей карте (id = 1).
+Клиент получает все данные по своей карте (id = ...)
 ....
 ===== Example request
 
@@ -476,7 +476,7 @@ include::{generated}/cards-get-byid/response.asciidoc[]
 Дано:
   клиент кликает на псевдоссылку с названием карты.
 Когда:
-  вводит новое название карты (name = Кредитка).
+  вводит новое название карты (name = ...)
 Тогда:
   сохраняется новое название карты.
 ....
