--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -1,10 +1,8 @@
+:toc: left
+:toclevels: 3
 = REST Cards
 
-:doctype: book
-:toc:
-:sectanchors:
-:sectlinks:
-:toclevels: 4
+
 :source-highlighter: highlightjs
 
 [[Overview]]
