--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -210,7 +210,7 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 | 1
 | Mandatory
 | ---
-| Режим работы (A - все, D - все различные карты, включая карты Альфа банка, C - карты клиента, P - карты партнера, O - карты партнера + карты Альфа Банка)
+| Режим работы ("all" - карты приложения + карты Альфа-Банка)
 | String
 
 |===
