--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -245,7 +245,7 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 | 1
 | Optional
 | null
-| Возвращать активная или просроченные карты? (true - активные карты не просроченные, false – неактивные карты, null – активные карты просроченные и не просроченные)
+| Возвращать активные или просроченные карты? (true - активные карты не просроченные, false – неактивные карты, null – активные карты просроченные и не просроченные)
 | Boolean
 
 |===
