--- a/cards.asciidoc
+++ b/cards.asciidoc
@@ -190,24 +190,21 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
-| 9
 | Mandatory
 | ---
 | Мнемоника пользователя и мнемоника местоположения
 | String
 
 | applicationId
-| 4
 | Mandatory
 | ---
 | ID приложения
 | String
 
 | mode
-| 1
 | Mandatory
 | ---
 | Режим работы ("all" - карты приложения + карты Альфа-Банка)
@@ -218,66 +215,34 @@ https://github.com/mbezrukov/alfa-p2p/blob/master/cards-json-schema[JSON schema]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | verificationMethod
-| 10
 | Optional
-| S
+| "3DSecure"
 | Статус верификации карты ("3DSecure", "hold", "notverify")
 | String
 
 | deleted
-| 1
 | Optional
 | false
-| Возвращать карты, удаленные пользователем? (true/false/null - да/нет/да)
+| Включать карты, удаленные пользователем? (true/false)
 | Boolean
 
 | blocked
-| 1
 | Optional
 | false
-| Возвращать заблокированные карты? (true/false/null - да/нет/да)
+| Включать заблокированные карты? (true/false)
 | Boolean
 
 | active
-| 1
 | Optional
-| null
-| Возвращать активные или просроченные карты? (true - активные карты не просроченные, false – неактивные карты, null – активные карты просроченные и не просроченные)
+| false
+| Включать неактивные и просроченные карты? (true/false)
 | Boolean
 
 |===
 
-===== Pagination
-|===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
-
-| page
-| 2
-| Optional
-| 1
-| Номер страницы (null - все карты)
-| Integer
-
-| perPage
-| 3
-| Optional
-| 999
-| Количество карт на одной странице
-| Integer
-
-6+| Параметры JSON-ответа
-
-| count
-| 3
-| ---
-| ---
-| Общее количество карт
-| Integer
-
-|===
 
 ==== Получение списка всех карт пользователя
 ....
@@ -377,17 +342,15 @@ include::{generated}/cards-get-recipientcards/response.asciidoc[]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
-| 9
 | Mandatory
 | ---
 | Мнемоника пользователя и мнемоника местоположения
 | String
 
 | applicationId
-| 4
 | Mandatory
 | ---
 | ID приложения
@@ -398,10 +361,9 @@ include::{generated}/cards-get-recipientcards/response.asciidoc[]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | cardId
-| 16
 | Mandatory
 | ---
 | ID карты
@@ -428,17 +390,15 @@ include::{generated}/cards-get-byid/response.asciidoc[]
 
 ===== Параметры заголовков запросов
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | customerId
-| 9
 | Mandatory
 | ---
 | Мнемоника пользователя и мнемоника местоположения
 | String
 
 | applicationId
-| 4
 | Mandatory
 | ---
 | ID приложения
@@ -449,10 +409,9 @@ include::{generated}/cards-get-byid/response.asciidoc[]
 
 ===== Параметры строки запроса
 |===
-| Параметр | Длина | Обязательность | По умолчанию | Описание | Тип
+| Параметр | Обязательность | По умолчанию | Описание | Тип
 
 | cardId
-| 16
 | Mandatory
 | ---
 | ID карты
